--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
-    <title> Nictorys - Factory & Industrial HTML Template </title>
+    <title> SHABAB International trading Co </title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -46,8 +46,8 @@
                         <div class="col col-md-9">
                             <div class="contact-info">
                                 <ul>
-                                    <li><i class="ti-mobile"></i> (+91) 9656 1234 56</li>
-                                    <li><i class="ti-email"></i> example@demo.com</li>
+                                    <li><i class="ti-mobile"></i> (+966) 12 6692174</li>
+                                    <li><i class="ti-email"></i> sales@shababintltrading.com</li>
                                     <li><i class="ti-time"></i> Sun - Fri 10AM - PM</li>
                                 </ul>
                             </div>
@@ -82,7 +82,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="services.html">Services</a></li>
-                            <li><a href="projects.html">Projects</a></li>
+                            <!-- <li><a href="projects.html">Projects</a></li> -->
                             <li><a href="gallery.html">Gallery</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
@@ -253,10 +253,11 @@
                                     <h3>Address Location</h3>
                                 </div>
                                 <ul>
-                                    <li>House no 25, dreen street, melborn Dowltown</li>
-                                    <li>Phone: ++8525120</li>
+                                    <li>No: 9, Baladiya street, Al Othaman Center,
+                                        Jeddah 21333, Saudi Arabia.</li>
+                                    <li>Phone: (+966) 12 6692174</li>
                                     <li>Office Time: 8AM- 4PM</li>
-                                    <li>Email: demo@ex.com</li>
+                                    <li>Email: sales@shababintltrading.com</li>
                                 </ul>
                             </div>
                         </div>
@@ -268,7 +269,7 @@
                     <div class="row">
                         <div class="separator"></div>
                         <div class="col col-xs-12">
-                            <p class="copyright">Copyright &copy; 2019 Nictorys. All rights reserved.</p>
+                            <p class="copyright">Copyright &copy; 2024 shabab International trading Co. All rights reserved.</p>
                         </div>
                     </div>
                 </div>
