--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
-    <title> Nictorys - Factory & Industrial HTML Template </title>
+    <title> SHABAB International trading Co </title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -19,6 +19,7 @@
     <link href="assets/css/owl.transitions.css" rel="stylesheet">
     <link href="assets/css/jquery.fancybox.css" rel="stylesheet">
     <link href="assets/css/odometer-theme-default.css" rel="stylesheet">
+    <link href="assets/css/lightbox.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
@@ -46,8 +47,8 @@
                         <div class="col col-md-9">
                             <div class="contact-info">
                                 <ul>
-                                    <li><i class="ti-mobile"></i> (+91) 9656 1234 56</li>
-                                    <li><i class="ti-email"></i> example@demo.com</li>
+                                    <li><i class="ti-mobile"></i> (+966) 12 6692174</li>
+                                    <li><i class="ti-email"></i> sales@shababintltrading.com</li>
                                     <li><i class="ti-time"></i> Sun - Fri 10AM - PM</li>
                                 </ul>
                             </div>
@@ -82,8 +83,8 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="services.html">Services</a></li>
-                            <li><a href="projects.html">Projects</a></li>
-                            <li><a href="gallery.html">Gallery</a></li>
+                            <!-- <li><a href="projects.html">Projects</a></li> -->
+                            <li><a class="active" href="gallery.html">Gallery</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div><!-- end of nav-collapse -->
@@ -103,19 +104,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col col-xs-12">
-                        <h2>Team</h2>
+                        <h2>Our Moments</h2>
                         <ol class="breadcrumb">
                             <li><a href="index.html">Home</a></li>
-                            <li>Team</li>
+                            <li>Gallery</li>
                         </ol>
                     </div>
                 </div> <!-- end row -->
             </div> <!-- end container -->
         </section>
-        <!-- end page-title -->
-
-
-        <!-- start team-section -->
+        
         <section class="team-section section-padding">
             <div class="container">
                 <div class="row">
@@ -124,161 +122,105 @@
                             <div class="grid">
                                 <div class="img-social">
                                     <div class="img-holder">
-                                        <img src="assets/images/team-1.jpg" alt>
-                                    </div>
-                                    <div class="social">
-                                        <ul>
-                                            <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                            <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                            <li><a href="#"><i class="ti-linkedin"></i></a></li>
-                                            <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                        </ul>
+                                        <a href="assets/images/projects-1.jpg" data-lightbox="team" data-title="Caption for Image 1">
+                                            <img src="assets/images/projects-1.jpg" alt>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="details">
-                                    <h3>Danial Jain</h3>
-                                    <span>Mechanical Engineering</span>
+                                    <h3>Caption for Image 1</h3>
                                 </div>
                             </div>
                             <div class="grid">
                                 <div class="img-social">
                                     <div class="img-holder">
-                                        <img src="assets/images/team-2.jpg" alt>
-                                    </div>
-                                    <div class="social">
-                                        <ul>
-                                            <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                            <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                            <li><a href="#"><i class="ti-linkedin"></i></a></li>
-                                            <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                        </ul>
+                                        <a href="assets/images/projects-2.jpg" data-lightbox="team" data-title="Caption for Image 2">
+                                            <img src="assets/images/projects-2.jpg" alt>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="details">
-                                    <h3>Jonathon Bill</h3>
-                                    <span>Site Manager</span>
+                                    <h3>Caption for Image 2</h3>
                                 </div>
                             </div>
                             <div class="grid">
                                 <div class="img-social">
                                     <div class="img-holder">
-                                        <img src="assets/images/team-3.jpg" alt>
-                                    </div>
-                                    <div class="social">
-                                        <ul>
-                                            <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                            <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                            <li><a href="#"><i class="ti-linkedin"></i></a></li>
-                                            <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                        </ul>
+                                        <a href="assets/images/projects-3.jpg" data-lightbox="team" data-title="Caption for Image 2">
+                                            <img src="assets/images/projects-3.jpg" alt>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="details">
-                                    <h3>Gotalon Simrol</h3>
-                                    <span>Testing Manager</span>
+                                    <h3>Caption for Image 2</h3>
                                 </div>
                             </div>
                             <div class="grid">
                                 <div class="img-social">
                                     <div class="img-holder">
-                                        <img src="assets/images/team-4.jpg" alt>
-                                    </div>
-                                    <div class="social">
-                                        <ul>
-                                            <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                            <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                            <li><a href="#"><i class="ti-linkedin"></i></a></li>
-                                            <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                        </ul>
+                                        <a href="assets/images/projects-4.jpg" data-lightbox="team" data-title="Caption for Image 2">
+                                            <img src="assets/images/projects-4.jpg" alt>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="details">
-                                    <h3>Mine Dow</h3>
-                                    <span>Cheif Officer</span>
+                                    <h3>Caption for Image 2</h3>
                                 </div>
                             </div>
                             <div class="grid">
                                 <div class="img-social">
                                     <div class="img-holder">
-                                        <img src="assets/images/team-1.jpg" alt>
-                                    </div>
-                                    <div class="social">
-                                        <ul>
-                                            <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                            <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                            <li><a href="#"><i class="ti-linkedin"></i></a></li>
-                                            <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                        </ul>
+                                        <a href="assets/images/projects-5.jpg" data-lightbox="team" data-title="Caption for Image 2">
+                                            <img src="assets/images/projects-5.jpg" alt>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="details">
-                                    <h3>Danial Jain</h3>
-                                    <span>Mechanical Engineering</span>
+                                    <h3>Caption for Image 2</h3>
                                 </div>
                             </div>
                             <div class="grid">
                                 <div class="img-social">
                                     <div class="img-holder">
-                                        <img src="assets/images/team-2.jpg" alt>
-                                    </div>
-                                    <div class="social">
-                                        <ul>
-                                            <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                            <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                            <li><a href="#"><i class="ti-linkedin"></i></a></li>
-                                            <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                        </ul>
+                                        <a href="assets/images/projects-6.jpg" data-lightbox="team" data-title="Caption for Image 2">
+                                            <img src="assets/images/projects-6.jpg" alt>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="details">
-                                    <h3>Jonathon Bill</h3>
-                                    <span>Site Manager</span>
+                                    <h3>Caption for Image 2</h3>
                                 </div>
                             </div>
                             <div class="grid">
                                 <div class="img-social">
                                     <div class="img-holder">
-                                        <img src="assets/images/team-3.jpg" alt>
-                                    </div>
-                                    <div class="social">
-                                        <ul>
-                                            <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                            <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                            <li><a href="#"><i class="ti-linkedin"></i></a></li>
-                                            <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                        </ul>
+                                        <a href="assets/images/projects-4.jpg" data-lightbox="team" data-title="Caption for Image 2">
+                                            <img src="assets/images/projects-4.jpg" alt>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="details">
-                                    <h3>Gotalon Simrol</h3>
-                                    <span>Testing Manager</span>
+                                    <h3>Caption for Image 2</h3>
                                 </div>
                             </div>
                             <div class="grid">
                                 <div class="img-social">
                                     <div class="img-holder">
-                                        <img src="assets/images/team-2.jpg" alt>
-                                    </div>
-                                    <div class="social">
-                                        <ul>
-                                            <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                            <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                            <li><a href="#"><i class="ti-linkedin"></i></a></li>
-                                            <li><a href="#"><i class="ti-pinterest"></i></a></li>
-                                        </ul>
+                                        <a href="assets/images/projects-5.jpg" data-lightbox="team" data-title="Caption for Image 2">
+                                            <img src="assets/images/projects-5.jpg" alt>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="details">
-                                    <h3>Mine Dow</h3>
-                                    <span>Cheif Officer</span>
+                                    <h3>Caption for Image 2</h3>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div> <!-- end container -->
+            </div>
         </section>
-        <!-- end team-section -->
+
 
         <!-- start site-footer -->
         <footer class="site-footer">
@@ -324,10 +266,11 @@
                                     <h3>Address Location</h3>
                                 </div>
                                 <ul>
-                                    <li>House no 25, dreen street, melborn Dowltown</li>
-                                    <li>Phone: ++8525120</li>
+                                    <li>No: 9, Baladiya street, Al Othaman Center,
+                                        Jeddah 21333, Saudi Arabia.</li>
+                                    <li>Phone: (+966) 12 6692174</li>
                                     <li>Office Time: 8AM- 4PM</li>
-                                    <li>Email: demo@ex.com</li>
+                                    <li>Email: sales@shababintltrading.com</li>
                                 </ul>
                             </div>
                         </div>
@@ -339,7 +282,7 @@
                     <div class="row">
                         <div class="separator"></div>
                         <div class="col col-xs-12">
-                            <p class="copyright">Copyright &copy; 2019 Nictorys. All rights reserved.</p>
+                            <p class="copyright">Copyright &copy; 2024 shabab International trading Co. All rights reserved.</p>
                         </div>
                     </div>
                 </div>
@@ -359,9 +302,18 @@
 
     <!-- Plugins for this template -->
     <script src="assets/js/jquery-plugin-collection.js"></script>
+    <script src="assets/js/lightbox.min.js"></script>
 
     <!-- Custom script for this template -->
     <script src="assets/js/script.js"></script>
+    <script>
+        lightbox.option({
+            'resizeDuration': 200,
+            'wrapAround': true,
+            'alwaysShowNavOnTouchDevices': true
+        });
+    </script>
+
 </body>
 
 </html>
