--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
-    <title> Nictorys - Factory & Industrial HTML Template </title>
+    <title> SHABAB International trading Co </title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -46,8 +46,8 @@
                         <div class="col col-md-9">
                             <div class="contact-info">
                                 <ul>
-                                    <li><i class="ti-mobile"></i> (+91) 9656 1234 56</li>
-                                    <li><i class="ti-email"></i> example@demo.com</li>
+                                    <li><i class="ti-mobile"></i> (+966) 12 6692174</li>
+                                    <li><i class="ti-email"></i> sales@shababintltrading.com</li>
                                     <li><i class="ti-time"></i> Sun - Fri 10AM - PM</li>
                                 </ul>
                             </div>
@@ -81,8 +81,8 @@
                         <ul class="nav navbar-nav">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="projects.html">Projects</a></li>
+                            <li><a class="active" href="services.html">Services</a></li>
+                            <!-- <li><a href="projects.html">Projects</a></li> -->
                             <li><a href="gallery.html">Gallery</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
@@ -103,7 +103,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col col-xs-12">
-                        <h2>Services</h2>
+                        <h2>Our Services</h2>
                         <ol class="breadcrumb">
                             <li><a href="index.html">Home</a></li>
                             <li>Services</li>
@@ -127,7 +127,7 @@
                                 </div>
                                 <div class="details">
                                     <i class="fi flaticon-solar-energy"></i>
-                                    <h3><a href="#">Power & Energy</a></h3>
+                                    <h3><a href="#">Industrial Materials Supply</a></h3>
                                     <p>Recently cut out of an illustrated magine and housed indust</p>
                                 </div>
                             </div>
@@ -233,10 +233,11 @@
                                     <h3>Address Location</h3>
                                 </div>
                                 <ul>
-                                    <li>House no 25, dreen street, melborn Dowltown</li>
-                                    <li>Phone: ++8525120</li>
+                                    <li>No: 9, Baladiya street, Al Othaman Center,
+                                        Jeddah 21333, Saudi Arabia.</li>
+                                    <li>Phone: (+966) 12 6692174</li>
                                     <li>Office Time: 8AM- 4PM</li>
-                                    <li>Email: demo@ex.com</li>
+                                    <li>Email: sales@shababintltrading.com</li>
                                 </ul>
                             </div>
                         </div>
@@ -248,7 +249,7 @@
                     <div class="row">
                         <div class="separator"></div>
                         <div class="col col-xs-12">
-                            <p class="copyright">Copyright &copy; 2019 Nictorys. All rights reserved.</p>
+                            <p class="copyright">Copyright &copy; 2024 shabab International trading Co. All rights reserved.</p>
                         </div>
                     </div>
                 </div>
